# hfighters

./: index.html  main.js  package-lock.json  package.json  server.cjs  tsconfig.app.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: CoachManager.tsx  Crud.tsx  Header.tsx  History.tsx  PriceManager.tsx  ProtectedRoute.tsx  Register.tsx  SatisfactionSurvey.tsx  SurveyResults.tsx
src/context/: DateTimeContext.tsx
src/firebase/: Firebase.ts  useFirebaseData.ts
src/hooks/: useAvailableNumbers.ts
src/pages/: AdminPage.tsx  Home.tsx  Login.tsx  SurveyPage.tsx
src/services/: AutoCleanupService.ts
src/styles/: Sidebar.css
