[package]
name = "hf"
version = "1.1.1"
description = "HouseFighters app"
authors = ["SaulAlvarezDev"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.5", features = [] }  # Versión disponible en crates.io

[dependencies]
tauri = { version = "=2.2.5", features = [] }        # Última versión estable conocida
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "=2.2.2"           # Compatible con tauri 2.2.5
